--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://host.docker.internal:3307/pets
+spring.datasource.url=jdbc:mysql://localhost:3307/pets
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
